--- a/config.json
+++ b/config.json
@@ -1,9 +1,18 @@
 {
-    "NUM_RUNS": 30,
     "DATA_PATH": "data/ner-mturk/",
     "EMBEDDING_DIM": 300,
-    "BATCH_SIZE": 64,
-    "PRETRAIN_EPOCHS": 5,
-    "TRAIN_EPOCHS": 30,
-    "NOISE_INCREMENTS": 50
+    "BATCH_SIZE": 64, 
+    "PRETRAIN_EPOCHS": 2,
+    "TRAIN_EPOCHS": 2,
+    "NOISE_INCREMENTS": 2,
+    "NUM_REPEATS": 1,
+    "DEFAULT_SETTINGS": {
+        "DATA_PATH": "data/ner-mturk/",
+        "EMBEDDING_DIM": 300,
+        "BATCH_SIZE": 64, 
+        "PRETRAIN_EPOCHS": 5,
+        "TRAIN_EPOCHS": 30,
+        "NOISE_INCREMENTS": 50,
+        "NUM_REPEATS": 3
+    }
 }
